moved functions too .py files

--- a/main.ipynb
+++ b/main.ipynb
@@ -43,110 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#feature_cols = []\n",
-    "stade_cols = [\n",
-    "    'Zone anterieure droite bas',\n",
-    "    'Zone anterieure droite haut',\n",
-    "    'Zone anterieure gauche bas',\n",
-    "    'Zone anterieure gauche haut',\n",
-    "    'Zone posterieure droite bas',\n",
-    "    'Zone posterieure droite haut',\n",
-    "    'Zone posterieure gauche bas',\n",
-    "    'Zone posterieure gauche haut',\n",
-    "]\n",
-    "\n",
-    "boolean_cols = [\n",
-    "    'Tabagisme actif',\n",
-    "    'BPCO',\n",
-    "    'Asthme',\n",
-    "    'Autre antecedent respiratoire',\n",
-    "    'Hypertension arterielle',\n",
-    "    'Cardiopathie ischemique',\n",
-    "    'Cardiopathie rythmique',\n",
-    "    'Diabete de type 1',\n",
-    "    'Diabete de type 2',\n",
-    "    'Diabetes',\n",
-    "    'Cancer  hemopathie maligne',\n",
-    "    'Demence',\n",
-    "    'Statut immunodeprime',\n",
-    "    \"AINS au long cours (dans le cadre d'une pathologie suivie)\",\n",
-    "    'AINS ponctuel recent (cadre des symptomatologies COVID-19 suspect avere)',\n",
-    "    'Confusion',\n",
-    "]\n",
-    "\n",
-    "int_cols = [\n",
-    "    'Tension arterielle systolique (mmHg)',\n",
-    "    'Tension arterielle diastolique (mmHg)',\n",
-    "    'Frequence cardiaque (puls. min)',\n",
-    "    'Frequence respiratoire (resp. min)',\n",
-    "    'Temperature (Celsius)',\n",
-    "    'Saturation O2',\n",
-    "]\n",
-    "\n",
-    "unique_cols = [\n",
-    "    # 'Nom du centre',\n",
-    "    # \"id\",\n",
-    "    'age',\n",
-    "    'Sexe',\n",
-    "    'Lieu de provenance du patient',\n",
-    "    'Echographiste',\n",
-    "    'Date de debut de la symptomatologie',\n",
-    "    'Oxygenotherapie'\n",
-    "]\n",
-    "\n",
-    "feature_cols = stade_cols + boolean_cols + unique_cols + int_cols\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dt64_to_float(dt64):\n",
-    "  if type(dt64) is float and np.isnan(dt64):\n",
-    "    return .0 # np.nan\n",
-    "  try:\n",
-    "    time = datetime.strptime(dt64, '%Y-%m-%d')\n",
-    "    return time.timestamp()\n",
-    "  except Exception as e:\n",
-    "    print(dt64)\n",
-    "    print(e)\n",
-    "  return dt64\n",
-    "\n",
-    "def convert(x):\n",
-    "  if x == 'Oui':\n",
-    "    return 1\n",
-    "  return 0\n",
-    "\n",
-    "def pre_processing(df):\n",
-    "  dataFrame = df.copy()\n",
-    "  # Change date from object to float\n",
-    "  dataFrame['Date de debut de la symptomatologie'] = dataFrame['Date de debut de la symptomatologie'].map(dt64_to_float).to_numpy()\n",
-    "\n",
-    "  # Change option to int\n",
-    "  dataFrame['Oxygenotherapie'] = dataFrame['Oxygenotherapie'].map({\"Air ambiant\": 1, \"Moderee\": 2, \"Assistance respiratoire\": 3, np.nan:0}).to_numpy()\n",
-    "\n",
-    "  # Change string to int\n",
-    "  dataFrame['Sexe'] = dataFrame['Sexe'].map({\"Masculin\": 0, \"Feminin\": 1}).to_numpy()\n",
-    "\n",
-    "  # Change string to int\n",
-    "  dataFrame['Lieu de provenance du patient'] = dataFrame['Lieu de provenance du patient'].map({\"Domicile\": 0, \"EHPAD\": 1, \"Hopital\": 2, \"Autre\": 3, np.nan:4}).to_numpy()\n",
-    "\n",
-    "  # Change option to int\n",
-    "  dataFrame['Echographiste'] = dataFrame['Echographiste'].map({\"Forme pour l'epidemie\": 1, \"Experience d'echographie\": 2, \"Expert\": 3, np.nan:0}).to_numpy()\n",
-    "\n",
-    "\n",
-    "  dataFrame[boolean_cols] = dataFrame[boolean_cols].apply(lambda value: value.map(lambda x: 1 if x == 'Oui' else 0))\n",
-    "\n",
-    "  # Change data from string \"Stade X\" to int X\n",
-    "  dataFrame[stade_cols] = dataFrame[stade_cols].apply(lambda value: value.map(lambda x: int(x[-1]) if type(x) is str else x))\n",
-    "\n",
-    "  return dataFrame\n",
+    "from preprocess import pre_processing\n",
     "\n",
     "data = pre_processing(df)\n"
    ]
@@ -178,15 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.pipeline import FeatureUnion, make_pipeline\n",
-    "from sklearn.impute import SimpleImputer, MissingIndicator\n",
-    "\n",
-    "transformer = FeatureUnion(\n",
-    "     transformer_list=[\n",
-    "         ('features', SimpleImputer(strategy='mean')),\n",
-    "         ('indicators', MissingIndicator())])\n",
-    "\n",
-    "transformer = transformer.fit(X_train, y_train)"
+    "from utils import fit, best_scores, get_pipeline, check_scores"
    ]
   },
   {
@@ -210,13 +103,19 @@
     }
    ],
    "source": [
-    "# train a logistic regression model on the training set\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "clf = make_pipeline(transformer, RandomForestClassifier())\n",
+    "lr_params = {\n",
+    "    \"logisticregression__C\": [0.001, 0.01, 0.1, 1, 10, 100, 1000],\n",
+    "    \"logisticregression__solver\": [\"lbfgs\", \"newton-cg\", \"sag\", \"saga\"],\n",
+    "    \"logisticregression__penalty\": [\"l2\", 'none'],\n",
+    "    \"logisticregression__max_iter\": [10000],\n",
+    "}\n",
     "\n",
-    "# fit model\n",
-    "clf.fit(X_train, y_train)"
+    "model = LogisticRegression()\n",
+    "clf = get_pipeline(model)\n",
+    "lr = fit(clf, lr_params, X, y, 20)\n",
+    "best_scores(lr)"
    ]
   },
   {
