clean code and update readme

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,22 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "\n",
     "import pandas as pd\n",
-    "from sklearn import metrics\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sn\n",
     "\n",
-    "from datetime import datetime"
+    "from utils import fit, best_scores, get_pipeline\n",
+    "from preprocess import pre_processing, feature_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,203 +27,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['id', 'Nom du centre', 'age', 'Sexe', 'Lieu de provenance du patient', 'Echographiste', 'Tabagisme actif', 'BPCO', 'Asthme', 'Autre antecedent respiratoire', 'Hypertension arterielle', 'Cardiopathie ischemique', 'Cardiopathie rythmique', 'Diabete de type 1', 'Diabete de type 2', 'Diabetes', 'Cancer  hemopathie maligne', 'Demence', 'Statut immunodeprime', \"AINS au long cours (dans le cadre d'une pathologie suivie)\", 'AINS ponctuel recent (cadre des symptomatologies COVID-19 suspect avere)', 'Tension arterielle systolique (mmHg)', 'Tension arterielle diastolique (mmHg)', 'Frequence cardiaque (puls. min)', 'Frequence respiratoire (resp. min)', 'Temperature (Celsius)', 'Confusion', 'Saturation O2', 'Date de debut de la symptomatologie', 'Zone anterieure droite haut', 'Zone anterieure droite bas', 'Zone anterieure gauche haut', 'Zone anterieure gauche bas', 'Zone posterieure droite haut', 'Zone posterieure droite bas', 'Zone posterieure gauche haut', 'Zone posterieure gauche bas', 'Oxygenotherapie', 'Outcome J28']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list(df.head()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocess import pre_processing\n",
+    "# df.drop(34, inplace=True)\n",
+    "# df.drop(87, inplace=True)\n",
+    "# df.drop(88, inplace=True)\n",
     "\n",
-    "data = pre_processing(df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = pre_processing(df)\n",
+    "\n",
     "X = data[feature_cols]\n",
     "y = data['Outcome J28']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split X and y into training and testing sets\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "# Split X and y into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import fit, best_scores, get_pipeline, check_scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('featureunion',\n",
-       "                 FeatureUnion(transformer_list=[('features', SimpleImputer()),\n",
-       "                                                ('indicators',\n",
-       "                                                 MissingIndicator())])),\n",
-       "                ('randomforestclassifier', RandomForestClassifier())])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 20 folds for each of 1 candidates, totalling 20 fits\n",
+      "The best parameters are: {'randomforestclassifier__criterion': 'gini', 'randomforestclassifier__max_depth': 100, 'randomforestclassifier__min_samples_leaf': 1, 'randomforestclassifier__min_samples_split': 2, 'randomforestclassifier__n_estimators': 50}\n",
+      "The best score that we got is: 0.8892857142857145\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "lr_params = {\n",
-    "    \"logisticregression__C\": [0.001, 0.01, 0.1, 1, 10, 100, 1000],\n",
-    "    \"logisticregression__solver\": [\"lbfgs\", \"newton-cg\", \"sag\", \"saga\"],\n",
-    "    \"logisticregression__penalty\": [\"l2\", 'none'],\n",
-    "    \"logisticregression__max_iter\": [10000],\n",
+    "# Model training\n",
+    "rf_params = {\n",
+    "    \"randomforestclassifier__criterion\": [\"gini\"],\n",
+    "    \"randomforestclassifier__max_depth\": [100],\n",
+    "    \"randomforestclassifier__min_samples_leaf\": [1],\n",
+    "    \"randomforestclassifier__min_samples_split\": [2],\n",
+    "    \"randomforestclassifier__n_estimators\": [50],\n",
     "}\n",
     "\n",
-    "model = LogisticRegression()\n",
+    "model = RandomForestClassifier()\n",
     "clf = get_pipeline(model)\n",
-    "lr = fit(clf, lr_params, X, y, 20)\n",
-    "best_scores(lr)"
+    "rdc = fit(clf, rf_params, X, y, 20)\n",
+    "best_scores(rdc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make class predictions for the testing set\n",
-    "y_pred_class = clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8484848484848485\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(metrics.accuracy_score(y_test, y_pred_class))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Back home              39\n",
-       "Hospitalization        23\n",
-       "Death                   2\n",
-       "Intensive care unit     2\n",
-       "Name: Outcome J28, dtype: int64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[34  0  5  0]\n",
-      " [ 0  0  2  0]\n",
-      " [ 2  0 21  0]\n",
-      " [ 0  0  1  1]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(metrics.confusion_matrix(y_test, y_pred_class))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "194          Back home\n",
-       "153    Hospitalization\n",
-       "145          Back home\n",
-       "8            Back home\n",
-       "111          Back home\n",
-       "            ...       \n",
-       "184          Back home\n",
-       "15     Hospitalization\n",
-       "178          Back home\n",
-       "96           Back home\n",
-       "18               Death\n",
-       "Name: Outcome J28, Length: 66, dtype: object"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -260,11 +122,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>236</th>\n",
-       "      <td>Hospitalization</td>\n",
+       "      <td>Back home</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253</th>\n",
-       "      <td>Back home</td>\n",
+       "      <td>Hospitalization</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>92</th>\n",
@@ -272,7 +134,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
-       "      <td>Back home</td>\n",
+       "      <td>Hospitalization</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -280,11 +142,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>151</th>\n",
-       "      <td>Back home</td>\n",
+       "      <td>Hospitalization</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
-       "      <td>Hospitalization</td>\n",
+       "      <td>Back home</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>313</th>\n",
@@ -292,11 +154,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
-       "      <td>Back home</td>\n",
+       "      <td>Hospitalization</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>105</th>\n",
-       "      <td>Hospitalization</td>\n",
+       "      <td>Back home</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -307,16 +169,16 @@
        "          prediction\n",
        "id                  \n",
        "237        Back home\n",
-       "236  Hospitalization\n",
-       "253        Back home\n",
+       "236        Back home\n",
+       "253  Hospitalization\n",
        "92         Back home\n",
-       "53         Back home\n",
+       "53   Hospitalization\n",
        "..               ...\n",
-       "151        Back home\n",
-       "39   Hospitalization\n",
+       "151  Hospitalization\n",
+       "39         Back home\n",
        "313        Back home\n",
-       "134        Back home\n",
-       "105  Hospitalization\n",
+       "134  Hospitalization\n",
+       "105        Back home\n",
        "\n",
        "[66 rows x 1 columns]"
       ]
@@ -326,11 +188,12 @@
     }
    ],
    "source": [
+    "# Creating csv file result\n",
     "test_data = pd.read_csv(\"./avatars_echOvid_test_X.csv\")\n",
     "\n",
-    "pre_processing(test_data)\n",
+    "X_test = pre_processing(test_data)[feature_cols]\n",
     "\n",
-    "y_pred_class = clf.predict(X_test)\n",
+    "y_pred_class = rdc.best_estimator_.predict(X_test)\n",
     "\n",
     "result_dataFrame =pd.DataFrame({'id':test_data['id'],'prediction':y_pred_class})\n",
     "result_dataFrame = result_dataFrame.set_index('id')\n",
