--- a/main.ipynb
+++ b/main.ipynb
@@ -8,11 +8,10 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import seaborn as sn\n",
     "\n",
-    "from utils import fit, best_scores, get_pipeline\n",
+    "from utils import test_model\n",
     "from preprocess import pre_processing, feature_cols"
    ]
   },
@@ -53,6 +52,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr_params = {\n",
+    "    \"logisticregression__C\": [0.001, 0.01, 0.1, 1, 10, 100, 1000],\n",
+    "    \"logisticregression__solver\": [\"lbfgs\", \"newton-cg\", \"sag\", \"saga\"],\n",
+    "    \"logisticregression__penalty\": [\"l2\", 'none'],\n",
+    "    \"logisticregression__max_iter\": [10000],\n",
+    "}\n",
+    "\n",
+    "lr = test_model(LogisticRegression(), lr_params, X_train, y_train, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "gnb_params = {\n",
+    "    \"gaussiannb__var_smoothing\": [1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1, 1, 10, 100, 1000]\n",
+    "}\n",
+    "\n",
+    "gnb = test_model(GaussianNB(), gnb_params, X_train, y_train, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "knns_params = {\n",
+    "    \"kneighborsclassifier__n_neighbors\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20],\n",
+    "    \"kneighborsclassifier__weights\": ['uniform', 'distance'],\n",
+    "    \"kneighborsclassifier__algorithm\": ['auto', 'ball_tree', 'kd_tree', 'brute'],\n",
+    "}\n",
+    "\n",
+    "knns = test_model(KNeighborsClassifier(), knns_params, X_train, y_train, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "dt_params = {\n",
+    "    \"decisiontreeclassifier__criterion\": ['gini', 'entropy'],\n",
+    "    \"decisiontreeclassifier__splitter\": ['best', 'random'],\n",
+    "    \"decisiontreeclassifier__max_depth\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20],\n",
+    "    \"decisiontreeclassifier__min_samples_split\": [2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
+    "    \"decisiontreeclassifier__min_samples_leaf\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
+    "    \"decisiontreeclassifier__max_features\": ['auto', 'sqrt', 'log2'],\n",
+    "}\n",
+    "\n",
+    "dt = test_model(DecisionTreeClassifier(), dt_params, X_train, y_train, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -67,19 +136,27 @@
     }
    ],
    "source": [
-    "# Model training\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "rf_params = {\n",
-    "    \"randomforestclassifier__criterion\": [\"gini\"],\n",
-    "    \"randomforestclassifier__max_depth\": [100],\n",
-    "    \"randomforestclassifier__min_samples_leaf\": [1],\n",
-    "    \"randomforestclassifier__min_samples_split\": [2],\n",
-    "    \"randomforestclassifier__n_estimators\": [50],\n",
+    "    \"randomforestclassifier__criterion\": [\"gini\", \"entropy\"],\n",
+    "    \"randomforestclassifier__max_depth\": [None, 5, 10, 20, 35, 50, 100, 200],\n",
+    "    \"randomforestclassifier__min_samples_leaf\": [1, 2, 4, 6, 8],\n",
+    "    \"randomforestclassifier__min_samples_split\": [2, 5, 10, 12],\n",
+    "    \"randomforestclassifier__n_estimators\": [10, 25, 50, 75, 100, 200, 500],\n",
     "}\n",
     "\n",
-    "model = RandomForestClassifier()\n",
-    "clf = get_pipeline(model)\n",
-    "rdc = fit(clf, rf_params, X, y, 20)\n",
-    "best_scores(rdc)"
+    "rf = test_model(RandomForestClassifier(), rf_params, X, y, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The random forest classifier is the best model so we will use it for the final submission\n",
+    "model = rf"
    ]
   },
   {
@@ -193,7 +270,7 @@
     "\n",
     "X_test = pre_processing(test_data)[feature_cols]\n",
     "\n",
-    "y_pred_class = rdc.best_estimator_.predict(X_test)\n",
+    "y_pred_class = model.predict(X_test)\n",
     "\n",
     "result_dataFrame =pd.DataFrame({'id':test_data['id'],'prediction':y_pred_class})\n",
     "result_dataFrame = result_dataFrame.set_index('id')\n",
